--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "yoshikii.com.record_nutrients"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -43,4 +43,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.android.support:cardview-v7:28.0.0"
     implementation "com.android.support:recyclerview-v7:28.0.0"
+
+    // ViewModel
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 }
